# llm-docs-rs

./: .gitignore  Cargo.toml
python/: build_index.py  test_agent.ipynb
src/: docs_rs_builder.rs  docs_rs_scraper.rs  lib.rs  main.rs
src/services/: mod.rs  scrape_services.rs
tests/: integration.rs  scrape_service_test.rs
